<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.imceits.aungtuntun.theomdbmovie.util.StringUtil" />
        <variable
            name="viewModel"
            type="com.imceits.aungtuntun.theomdbmovie.ui.MovieDetailViewModel" />
        <variable
            name="movie"
            type="com.imceits.aungtuntun.theomdbmovie.data.Movies" />
        <variable
            name="stringUtil"
            type="com.imceits.aungtuntun.theomdbmovie.util.StringUtil" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorMainDark"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.MovieDetailFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="@color/colorMainDark">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/img_poster"
                        android:layout_width="180dp"
                        android:layout_height="200dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/movie_poster"
                        android:scaleType="centerCrop"
                        android:transitionName="@string/shared_element"
                        app:image_url="@{viewModel.movieDetail.posterPath}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:src="@tools:sample/backgrounds/scenic[1]" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="@+id/img_poster"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/img_poster"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/img_lang"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:contentDescription="@string/language"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/ic_language_green_24dp" />

                        <TextView
                            android:id="@+id/txt_lang"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@{viewModel.movieDetail.originalLanguage}"
                            android:textColor="@android:color/background_light"
                            android:textSize="16sp"
                            app:layout_constraintBottom_toBottomOf="@+id/img_lang"
                            app:layout_constraintStart_toEndOf="@+id/img_lang"
                            app:layout_constraintTop_toTopOf="@+id/img_lang"
                            tools:text="en " />

                        <ImageView
                            android:id="@+id/img_rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:contentDescription="@string/rating"
                            android:src="@drawable/ic_stars_green_24dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/img_lang" />

                        <TextView
                            android:id="@+id/txt_rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@{String.valueOf(viewModel.movieDetail.voteAverage)}"
                            android:textColor="@android:color/background_light"
                            android:textSize="16sp"
                            app:layout_constraintBottom_toBottomOf="@+id/img_rating"
                            app:layout_constraintStart_toEndOf="@+id/img_rating"
                            app:layout_constraintTop_toTopOf="@+id/img_rating"
                            tools:text="6.7" />

                        <ImageView
                            android:id="@+id/img_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:contentDescription="@string/show_time"
                            android:src="@drawable/ic_movie_24dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/img_rating" />

                        <TextView
                            android:id="@+id/txt_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:textColor="@android:color/background_light"
                            android:textSize="16sp"
                            app:layout_constraintBottom_toBottomOf="@+id/img_time"
                            app:layout_constraintStart_toEndOf="@+id/img_time"
                            app:layout_constraintTop_toTopOf="@+id/img_time"
                            app:runtime="@{viewModel.movieDetail.runtime}"
                            tools:text="1hr(s) 45 min(s)" />

                        <ImageView
                            android:id="@+id/img_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:contentDescription="@string/released_date"
                            android:src="@drawable/ic_date_range_24dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/img_time" />

                        <TextView
                            android:id="@+id/txt_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@{viewModel.movieDetail.releasedDate}"
                            android:textColor="@android:color/background_light"
                            android:textSize="16sp"
                            app:layout_constraintBottom_toBottomOf="@+id/img_date"
                            app:layout_constraintStart_toEndOf="@+id/img_date"
                            app:layout_constraintTop_toTopOf="@+id/img_date"
                            tools:text="19-11-2019" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:id="@+id/txt_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@{viewModel.movieDetail.title}"
                        android:textColor="@android:color/background_light"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/img_poster"
                        tools:text="Guardian of Galaxy vol 2" />

                    <TextView
                        android:id="@+id/txt_genre"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:textColor="@android:color/background_light"
                        android:textSize="18sp"
                        app:genres="@{viewModel.movieDetail.genres}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txt_title"
                        tools:text="Action, Adventure" />

                    <TextView
                        android:id="@+id/label_overview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/overview"
                        android:textColor="@android:color/background_light"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txt_genre" />

                    <TextView
                        android:id="@+id/txt_overview"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:text="@{viewModel.movieDetail.overview}"
                        android:textColor="@android:color/background_light"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/label_overview"
                        tools:text="Peter quill is leader" />

                    <TextView
                        android:id="@+id/label_casts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/label_casts"
                        android:textAllCaps="true"
                        android:textColor="@android:color/background_light"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txt_overview" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/cast_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/label_casts"
                        tools:listitem="@layout/cast_item" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>